--- a/psdaq/psdaq/eb/CMakeLists.txt
+++ b/psdaq/psdaq/eb/CMakeLists.txt
@@ -72,9 +72,9 @@ add_executable(ft_client          ft_client.cc)
 add_executable(ft_writemsg_client ft_writemsg_client.cc)
 add_executable(ft_writemsg_server ft_writemsg_server.cc)
 
-add_executable(eblf_pingpong    eblf_pingpong.cc)
+#add_executable(eblf_pingpong    eblf_pingpong.cc)
 
-add_executable(tstEbLfLink      tstEbLfLink.cc)
+#add_executable(tstEbLfLink      tstEbLfLink.cc)
 
 #add_executable(ibMon            ibMon.cc)
 
@@ -138,15 +138,15 @@ target_link_libraries(ft_writemsg_server
   utilities
 )
 
-target_link_libraries(eblf_pingpong
-  utilities
-)
+#target_link_libraries(eblf_pingpong
+#  utilities
+#)
 
-target_link_libraries(tstEbLfLink
-  utilities
-  Threads::Threads
-  rt
-)
+#target_link_libraries(tstEbLfLink
+#  utilities
+#  Threads::Threads
+#  rt
+#)
 
 #target_link_libraries(ibMon
 #  zmq
