--- a/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
@@ -21,7 +21,7 @@ procmgr_config = [
  {                        id:'partca-'+platform, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
  {                        id:'procstat', flags:'p', cmd:'procstat p'+platform+'.cnf.last'},
  { host: collect_host,    id:'control', flags:'spu', env:epics_env, cmd:'control -v -C BEAM -P tst -B DAQ:LAB2 -x 2 --user '+user+' --password '+password},
- {                        flags:'xp', id:'control_gui', cmd:'control_gui -t 30000 -H'+collect_host+' -E'},
+ {                        flags:'xp', id:'control_gui', cmd:'control_gui -t 30000 -H'+collect_host+' --user '+user+' --password '+password+' -E'},
  #{                        flags:'xp', id:'control_gui', cmd:'control_gui -H'+collect_host+' -L logs'},
  # trigger event builder
  { host: 'drp-tst-dev011', id:'teb1', flags:'spu', cmd:'teb -C '+collect_host},
