--- a/psdaq/psdaq/cnf/tmo.cnf
+++ b/psdaq/psdaq/cnf/tmo.cnf
@@ -83,7 +83,7 @@ procmgr_config = [
  #{ host: 'drp-tst-dev018', id:'bld_0',       flags:'pu',   conda:conda_rel, env:epics_env, cmd:bld_cmd},
 
  # TimeTool
- #{ host: 'drp-tst-dev012', id:'tmott_0',     flags:'pu',   conda:conda_rel, cmd:drp_cmd0+' -D tt -k batching=yes'},
+ #{ host: 'drp-tst-dev012', id:'tmott_0',     flags:'pu',   conda:conda_rel, cmd:drp_cmd0+' -D tt -k batching=no'},
  #{ host: 'drp-tst-dev003', id:'tmoopaltt_0', flags:'pu',   conda:conda_rel, cmd:drp_cmd0+' -D opal -k batching=no'},
 
  # Opal (non-timetool)
@@ -98,7 +98,7 @@ procmgr_config = [
  #{ host: 'drp-tst-dev005', id:'tmowave8_0',  flags:'spu',  conda:conda_rel, cmd:drp_cmd0+' -D wave8 -k epics_prefix=DAQ:WAVE8'},
 
  # Cam
- { host: 'drp-tst-dev014', id:'tmocam0_0',   flags:'spu',  conda:conda_rel, cmd:drp_cmd1+' -D fakecam -k "sim_length=14,batching=yes"'},
+ { host: 'drp-tst-dev014', id:'tmocam0_0',   flags:'spu',  conda:conda_rel, cmd:drp_cmd1+' -D fakecam -k "sim_length=14,batching=no"'},
  { host: 'drp-tst-dev015', id:'tmocam1_0',   flags:'spu',  conda:conda_rel, cmd:drp_cmd1+' -D fakecam -k "sim_length=14,batching=no"'},
  { host: 'drp-tst-dev004', id:'tmocam2_0',   flags:'spu',  conda:conda_rel, cmd:drp_cmd1+' -D fakecam -k "sim_length=14,batching=no"'},
 
