--- a/psdaq/psdaq/cnf/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-cam.cnf
@@ -18,7 +18,7 @@ collect_host = 'drp-tst-dev002'
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- {                        id:'groupca',flags:'s', env:epics_env, cmd:'groupca DAQ:LAB2 2 1 5'},
+ {                        id:'groupca',flags:'s', env:epics_env, cmd:'groupca DAQ:LAB2 2 1'},
  {                        id:'procstat', flags:'p', cmd:'procstat p'+platform+'.cnf.last'},
  { host: collect_host,    id:'control', flags:'sxpu', env:epics_env, cmd:'control -v -C BEAM -P '+hutch+' -B DAQ:LAB2 -x 2 --user '+user+' --password '+password},
  {                        flags:'xp', id:'control_gui', cmd:'control_gui -E -t 30000 -l WARNING -H '+collect_host},
