--- a/psdaq/psdaq/cnf/lab3-ts.cnf
+++ b/psdaq/psdaq/cnf/lab3-ts.cnf
@@ -25,7 +25,7 @@ drp_cmd  = 'drp -P '+hutch+' -l 0x1 -d /dev/datadev_1 -C '+collect_host+' -o /ff
 
 procmgr_config = [
  {                        id:'groupca',flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
- {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
 
  { host: 'drp-tst-dev019', id:'teb1', flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
  { host: 'drp-tst-dev002', id:'xppts_0', flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D ts'},
