--- a/psdaq/psdaq/cnf/test-hsd.cnf
+++ b/psdaq/psdaq/cnf/test-hsd.cnf
@@ -8,7 +8,7 @@ groups = '0'
 
 procmgr_config = [
  {                        id:'groupca' , flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
- {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
 ]
 
 node=0
