--- a/psdaq/psdaq/cnf/xcs.cnf
+++ b/psdaq/psdaq/cnf/xcs.cnf
@@ -34,5 +34,5 @@ procmgr_config = [
  {                    id:'tprioc' , port:'29454', flags:'s', conda:conda_rel, env:epics_env, cmd:'tprioc -r a -n DAQ:XCS:TPR'},
 
 ## procstat
- {                    id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ {                    id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
   ]
